--- a/contekan.html
+++ b/contekan.html
@@ -65,5 +65,5 @@ App\Models\Post::create([
 
 
 App\Models\Category::create([
-    'name' => 'Web Design',
-    'slug' => 'web-design'])
+    'name' => 'YOUTUBER',
+    'slug' => 'youtube'])
